[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Highscore/PostGameHighscore.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api_v2/gj_icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/code_bold_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/AddNewHighscoreUI.gd" type="Script" id=5]
[ext_resource path="res://Fonts/code_bold_big.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/code_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Sprites/VendingMachines/vendingMachine0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Yorn/yorn.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/CleaningLady/cleaning_trolley.png" type="Texture" id=10]

[node name="PostGameHighscore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.341176, 0.454902, 0.694118, 1 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
private_key = "867141e4f6d7c303193c9be0d19e5523"
game_id = "403339"

[node name="NewScoreInfo" type="Label" parent="."]
margin_left = 800.0
margin_top = 340.0
margin_right = 1151.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 4 )
text = "Score: 13340"

[node name="NewHighscoreUI" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="NewHighscoreUI"]
anchor_right = 1.0
margin_right = 1880.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 960, 113 )
custom_fonts/font = ExtResource( 6 )
text = "New Highscore"
align = 1
valign = 1

[node name="SizeTween" type="Tween" parent="NewHighscoreUI/Label"]

[node name="ColorTween" type="Tween" parent="NewHighscoreUI/Label"]

[node name="PlaceInfo2" type="Label" parent="NewHighscoreUI"]
margin_left = 800.0
margin_top = 422.0
margin_right = 1018.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 4 )
text = "Place:"

[node name="PlaceInfo" type="Label" parent="NewHighscoreUI"]
margin_left = 931.0
margin_top = 422.0
margin_right = 1083.0
margin_bottom = 484.0
custom_fonts/font = ExtResource( 4 )
text = "4th"
align = 1

[node name="InsertNicknameLabel" type="Label" parent="NewHighscoreUI"]
margin_left = 248.324
margin_top = 634.324
margin_right = 695.324
margin_bottom = 693.324
custom_fonts/font = ExtResource( 4 )
text = "Insert Nickname:"
align = 1

[node name="LoadingLabel" type="Label" parent="NewHighscoreUI"]
visible = false
margin_left = 735.0
margin_top = 925.0
margin_right = 1185.0
margin_bottom = 985.0
custom_fonts/font = ExtResource( 4 )
text = "SUBMITTING..."
align = 1

[node name="LineEdit" type="LineEdit" parent="NewHighscoreUI"]
margin_left = 690.0
margin_top = 618.0
margin_right = 1290.0
margin_bottom = 708.0
custom_fonts/font = ExtResource( 7 )

[node name="AddHighscoreButton" type="Button" parent="NewHighscoreUI"]
anchor_right = 1.0
margin_left = 780.0
margin_top = 925.0
margin_right = 1100.0
margin_bottom = 1008.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "Submit Score"

[node name="MainMenuButton" type="Button" parent="NewHighscoreUI"]
visible = false
anchor_right = 1.0
margin_left = 785.0
margin_top = 992.376
margin_right = 1095.0
margin_bottom = 1072.38
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "Main Menu"

[node name="Machine" type="Sprite" parent="NewHighscoreUI"]
position = Vector2( 234.788, 213.257 )
rotation = -0.349066
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="Machine2" type="Sprite" parent="NewHighscoreUI"]
position = Vector2( 1666.07, 233.762 )
rotation = 0.349066
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="YornGuy" type="Sprite" parent="NewHighscoreUI"]
position = Vector2( 836.623, 891.988 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
hframes = 3

[node name="YornGuy2" type="Sprite" parent="NewHighscoreUI"]
position = Vector2( 873.459, 881.158 )
rotation = -0.523599
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
flip_h = true
hframes = 3

[node name="RegularScoreUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MotivationalQuote" type="Label" parent="RegularScoreUI"]
margin_left = 494.269
margin_top = 558.548
margin_right = 1397.27
margin_bottom = 622.548
custom_fonts/font = ExtResource( 4 )
text = "We can't all be winners"
align = 1

[node name="HighscoresButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 150.0
margin_top = 950.0
margin_right = 528.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "Highscores"

[node name="NewGameButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 787.0
margin_top = 950.0
margin_right = 1092.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "New game"

[node name="MainMenuButton" type="Button" parent="RegularScoreUI"]
anchor_right = 1.0
margin_left = 1400.0
margin_top = 950.0
margin_right = 1718.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 7 )
toggle_mode = true
text = "Main Menu"

[node name="Trolley" type="Sprite" parent="RegularScoreUI"]
position = Vector2( 323.858, 420.09 )
rotation = 0.261799
texture = ExtResource( 10 )

[node name="Trolley2" type="Sprite" parent="RegularScoreUI"]
position = Vector2( 1539.71, 505.219 )
rotation = -0.261799
texture = ExtResource( 10 )
flip_h = true

[connection signal="api_scores_added" from="GameJoltAPI" to="NewHighscoreUI" method="_on_GameJoltAPI_api_scores_added"]
[connection signal="api_scores_fetched" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_scores_fetched"]
[connection signal="tween_completed" from="NewHighscoreUI/Label/SizeTween" to="NewHighscoreUI" method="_on_SizeTween_tween_completed"]
[connection signal="tween_completed" from="NewHighscoreUI/Label/ColorTween" to="NewHighscoreUI" method="_on_ColorTween_tween_completed"]
[connection signal="pressed" from="NewHighscoreUI/AddHighscoreButton" to="NewHighscoreUI" method="_on_AddHighscoreButton_pressed"]
[connection signal="pressed" from="NewHighscoreUI/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/HighscoresButton" to="." method="_on_HighscoresButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="RegularScoreUI/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
